--- a/ReachComApp/MainWindow.xaml
+++ b/ReachComApp/MainWindow.xaml
@@ -39,7 +39,7 @@
             VerticalAlignment="Top"
             SelectionChanged="TabControlMain_SelectionChanged"
             TabStripPlacement="Left">
-            <TabItem Name="TabItemIntro">
+            <TabItem Name="TabItemIntro" TabIndex="0">
                 <TabItem.Header>
                     <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
                         <Image MaxHeight="32" Source="Ignition switch-WF.ico" />
@@ -55,6 +55,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="50" />
                         <RowDefinition Height="3*" />
+                        <RowDefinition Height="70" />
                         <RowDefinition Height="1*" />
                     </Grid.RowDefinitions>
                     <RichTextBox
@@ -96,9 +97,19 @@
 
                         </FlowDocument>
                     </RichTextBox>
+                    <Button
+                        Name="ButtonIntro"
+                        Grid.Row="2"
+                        Width="135"
+                        Height="36"
+                        Click="ButtonIntro_Click">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontStyle="Normal" FontWeight="Bold">Start</TextBlock>
+                        </StackPanel>
+                    </Button>
                 </Grid>
             </TabItem>
-            <TabItem Name="TabItemSealApp">
+            <TabItem Name="TabItemSealApp" TabIndex="1">
                 <TabItem.Header>
                     <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
                         <Image MaxHeight="32" Source="Apps on computer-WF.ico" />
@@ -128,7 +139,8 @@
                         Grid.Row="3"
                         Grid.Column="3"
                         Width="125"
-                        Height="36">
+                        Height="36"
+                        Click="ButoonSealAppConfirm_Click">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="Check-03.ico" />
                             <TextBlock Margin="5" TextAlignment="Right">Confirm App</TextBlock>
@@ -138,7 +150,7 @@
 
                 </Grid>
             </TabItem>
-            <TabItem Name="TabItemError">
+            <TabItem Name="TabItemError" TabIndex="2">
                 <TabItem.Header>
                     <StackPanel
                         HorizontalAlignment="Left"
@@ -174,7 +186,8 @@
                         Grid.Row="3"
                         Grid.Column="3"
                         Width="125"
-                        Height="36">
+                        Height="36"
+                        Click="ButoonErrorConfirm_Click">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="Check-03.ico" />
                             <TextBlock Margin="5" TextAlignment="Right">Confirm Error</TextBlock>
@@ -184,7 +197,7 @@
 
                 </Grid>
             </TabItem>
-            <TabItem Name="TabItemCurrentAction">
+            <TabItem Name="TabItemCurrentAction" TabIndex="3">
                 <TabItem.Header>
                     <StackPanel
                         HorizontalAlignment="Left"
@@ -220,7 +233,8 @@
                         Grid.Row="3"
                         Grid.Column="3"
                         Width="125"
-                        Height="36">
+                        Height="36"
+                        Click="ButoonCurrentActionConfirm_Click">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="Check-03.ico" />
                             <TextBlock Margin="5" TextAlignment="Right">Confirm Action</TextBlock>
@@ -230,7 +244,7 @@
 
                 </Grid>
             </TabItem>
-            <TabItem Name="TabItemImpacts">
+            <TabItem Name="TabItemImpacts" TabIndex="4">
                 <TabItem.Header>
                     <StackPanel
                         HorizontalAlignment="Left"
@@ -265,8 +279,9 @@
                         Name="ButoonCurrentImpactsConfirm"
                         Grid.Row="3"
                         Grid.Column="3"
-                        Width="125"
-                        Height="36">
+                        Width="130"
+                        Height="36"
+                        Click="ButoonCurrentImpactsConfirm_Click">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="Check-03.ico" />
                             <TextBlock Margin="5" TextAlignment="Right">Confirm Impacts</TextBlock>
@@ -276,7 +291,7 @@
 
                 </Grid>
             </TabItem>
-            <TabItem Name="TabItemReachPosting">
+            <TabItem Name="TabItemReachPosting" TabIndex="5">
                 <TabItem.Header>
                     <StackPanel
                         HorizontalAlignment="Left"
@@ -312,7 +327,7 @@
                     </RichTextBox>
                 </Grid>
             </TabItem>
-            <TabItem Name="TabItemHelp">
+            <TabItem Name="TabItemHelp" TabIndex="6">
                 <TabItem.Header>
                     <StackPanel
                         HorizontalAlignment="Left"
